--- a/libs/chow-engine/tsconfig.lib.json
+++ b/libs/chow-engine/tsconfig.lib.json
@@ -7,7 +7,8 @@
     "tsBuildInfoFile": "dist/tsconfig.lib.tsbuildinfo",
     "emitDeclarationOnly": true,
     "forceConsistentCasingInFileNames": true,
-    "types": ["node"]
+    "types": ["@webgpu/types"],
+    "lib": ["ESNext", "dom"]
   },
   "include": ["src/**/*.ts"],
   "references": [],
