--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "license": "MIT",
   "scripts": {},
   "private": true,
-  "dependencies": {},
   "devDependencies": {
     "@eslint/js": "^9.8.0",
     "@nx/eslint": "20.6.1",
@@ -18,6 +17,7 @@
     "@swc/jest": "~0.2.36",
     "@types/jest": "^29.5.12",
     "@types/node": "18.16.9",
+    "@webgpu/types": "^0.1.60",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.0.0",
     "jest": "^29.7.0",
