--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "license": "MIT",
   "scripts": {},
   "private": true,
-  "dependencies": {},
   "devDependencies": {
     "@eslint/js": "^9.8.0",
     "@nx/eslint": "20.6.1",
     "@nx/eslint-plugin": "20.6.1",
     "@nx/jest": "20.6.1",
     "@nx/js": "20.6.1",
+    "@nx/web": "^20.7.1",
     "@swc-node/register": "~1.9.1",
     "@swc/cli": "~0.3.12",
     "@swc/core": "~1.5.7",
