--- a/examples/cubes/tsconfig.json
+++ b/examples/cubes/tsconfig.json
@@ -3,6 +3,9 @@
   "include": [],
   "references": [
     {
+      "path": "../../libs/chow-engine"
+    },
+    {
       "path": "./tsconfig.app.json"
     },
     {
