--- a/examples/cubes/package.json
+++ b/examples/cubes/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "@chow/chow-engine": "^0.0.1"
+    "@chow/chow-engine": "^0.0.1",
+    "wgpu-matrix": "^3.4.0"
   }
 }
