--- a/examples/cubes/tsconfig.app.json
+++ b/examples/cubes/tsconfig.app.json
@@ -9,7 +9,8 @@
       "node",
       "@nx/react/typings/cssmodule.d.ts",
       "@nx/react/typings/image.d.ts",
-      "vite/client"
+      "vite/client",
+      "@webgpu/types"
     ],
     "rootDir": "src",
     "module": "esnext",
