--- a/examples/cubes/tsconfig.app.json
+++ b/examples/cubes/tsconfig.app.json
@@ -9,7 +9,8 @@
       "node",
       "@nx/react/typings/cssmodule.d.ts",
       "@nx/react/typings/image.d.ts",
-      "vite/client"
+      "vite/client",
+      "@webgpu/types"
     ],
     "rootDir": "src",
     "module": "esnext",
@@ -31,5 +32,10 @@
     "eslint.config.cjs",
     "eslint.config.mjs"
   ],
-  "include": ["src/**/*.js", "src/**/*.jsx", "src/**/*.ts", "src/**/*.tsx"]
+  "include": ["src/**/*.js", "src/**/*.jsx", "src/**/*.ts", "src/**/*.tsx"],
+  "references": [
+    {
+      "path": "../../libs/chow-engine/tsconfig.lib.json"
+    }
+  ]
 }
