--- a/libs/chow-engine/package.json
+++ b/libs/chow-engine/package.json
@@ -34,6 +34,10 @@
   },
   "dependencies": {
     "@swc/helpers": "~0.5.11",
-    "bitecs": "^0.3.40"
+    "bitecs": "^0.3.40",
+    "wgpu-matrix": "^3.4.0"
+  },
+  "devDependencies": {
+    "@webgpu/types": "^0.1.60"
   }
 }
