--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@testing-library/dom": "10.4.0",
     "@testing-library/react": "16.1.0",
     "@types/jest": "^29.5.12",
+    "@webgpu/types": "^0.1.60",
     "@types/node": "^20.0.0",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
